--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Portfolio Website</title>
 </head>
+
 <body>
-    <h1>Hello</h1>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-wrapper">
+                <a href="" class="logo">Serg</a>
+                <nav class="nav">
+                    <ul class="nav-menu">
+                        <li class="nav-item">
+                            <a href="" class="nav-link active">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="nav-menu-btn"></div>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
