added about section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,223 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- ====== Home section ====== -->
+        <section class="home" id="home">
+            <div class="container home-wrapper">
+                <div class="media-icons">
+                    <a href="">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+                <div class="home-info">
+                    <h1>Hi, I am Serg</h1>
+                    <h3>Front-end Developer</h3>
+                    <p>
+                        I create stunnig websites for your business, Highly experienced in
+                        web design and development
+                    </p>
+                    <a href="" class="home-info-link inner-info-link">
+                        Contact me
+                        <i class="fa-regular fa-circle-right"></i>
+                    </a>
+                </div>
+                <div class="home-img">
+                    <img src="./img/main-img.png" alt="man">
+                </div>
+
+            </div>
+            <a href="#about" class="scroll-down">
+                Scroll down
+                <i class="fa-solid fa-arrow-down"></i>
+            </a>
+        </section>
+        <!-- ====== end Home section ====== -->
+
+        <!-- ======= About section ======= -->
+        <section class="about section" id="about">
+            <div class="container flex-center">
+                <h2 class="inner-title">About me</h2>
+                <h3 class="inner-second-title">About me</h3>
+                <div class="about-wrapper">
+                    <div class="about-img">
+                        <img src="./img/about-img.png" alt="about">
+                    </div>
+                    <div class="about-info">
+                        <div class="description">
+                            <h3>I'm Serg</h3>
+                            <h4>
+                                A lead
+                                <span>Front-End Developer</span> based in <span>California</span>
+                            </h4>
+                            <p>
+                                I design and develop services for customers specializing
+                                creating stylish, modern websites,
+                                web services and online stores. My passion is to design
+                                digital user experiences through
+                                meaningful interactions. Check out my Portfolio
+                            </p>
+                        </div>
+                        <ul class="professional-list">
+                            <li class="list-item">
+                                <span class="number">5+</span>
+                                <span class="text">Years of experience</span>
+                            </li>
+                            <li class="list-item">
+                                <span class="number">3k+</span>
+                                <span class="text">Happy Customers</span>
+                            </li>
+                            <li class="list-item">
+                                <span class="number">5+</span>
+                                <span class="text">Success Projects</span>
+                            </li>
+                        </ul>
+                        <a href="" class="inner-info-link">
+                            Download
+                            <i class="fa-solid fa-download"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= end About section ====== -->
+
+        <!-- ======= Skills section ====== -->
+        <section class="skills section" id="skills">
+            <div class="container felx-center">
+                <h2 class="inner-title">Skills</h2>
+                <h3 class="inner-second-tittle">Skills</h3>
+                <div class="inner-content">
+                    <div class="skills-description">
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                    <div class="skills-info education-all">
+                        <div class="education">
+                            <h4 class="label"></h4>
+                            <ul class="education-list">
+                                <li class="item">
+                                    <span class="year"></span>
+                                    <p></p>
+                                </li>
+                                <li class="item">
+                                    <span class="year"></span>
+                                    <p></p>
+                                </li>
+                                <li class="item">
+                                    <span class="year"></span>
+                                    <p></p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="education">
+                            <h4 class="label"></h4>
+                            <ul class="bars">
+                                <li class="bar">
+                                    <div class="info">
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                                <li class="bar">
+                                    <div class="info">
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                                <li class="bar">
+                                    <div class="info">
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                                <li class="bar">
+                                    <div class="info">
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                                <li class="bar">
+                                    <div class="info">
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="education">
+                            <h4 class="label"></h4>
+                            <ul class="education-list">
+                                <li class="item">
+                                    <span></span>
+                                    <p>
+                                        <sapn></sapn>
+                                    </p>
+                                </li>
+                                <li class="item">
+                                    <span></span>
+                                    <p>
+                                        <sapn></sapn>
+                                    </p>
+                                </li>
+                                <li class="item">
+                                    <span></span>
+                                    <p>
+                                        <sapn></sapn>
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="education work-exp">
+                        <h3 class="work-exp-title">
+                            <div class="slills-info">
+                                <div class="experience-card">
+                                    <div class="upper">
+                                        <h3></h3>
+                                        <h5></h5>
+                                        <span></span>
+                                        <div class="hr"></div>
+                                    </div>
+                                </div>
+                                <div class="experience-card">
+                                    <div class="upper">
+                                        <h3></h3>
+                                        <h5></h5>
+                                        <span></span>
+                                        <div class="hr"></div>
+                                    </div>
+                                </div>
+                                <div class="experience-card">
+                                    <div class="upper">
+                                        <h3></h3>
+                                        <h5></h5>
+                                        <span></span>
+                                        <div class="hr"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= end Skills section ====== -->
+
+
+    </main>
 </body>
 
 </html>
